--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-.ewf, .sqcx form, .xitong-ul, .mingxing-jianjie { font-size: 0; -webkit-text-size-adjust: none; }
+@font-face { font-family: myhelvnul; src: url("../fonts/HELVNUL.TTF"); }
+.dt-xp:after { content: ""; height: 0; display: block; clear: both; visibility: hidden; }
+
+.ewf, .sqcx form, .xitong-ul, .mingxing-jianjie, .dongtai-ul, .product-fenye, .smty ul { font-size: 0; -webkit-text-size-adjust: none; }
 
 /* 设置HTML5元素为块 */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
@@ -25,6 +28,17 @@ a > img { vertical-align: bottom; }
 /* 页面主代码 */
 body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, Arial, sans-serif; color: #333333; background: #e8e9ed; overflow-y: scroll; overflow-x: hidden; *overflow-y: auto !important; max-width: 640px; margin: 0 auto; font-size: 0.55rem; line-height: 1.6em; }
 
+.hui { background: #faf9f6; }
+
+.bai { background: #fff; }
+
+.ab { position: relative; }
+
+.text-center { text-align: center; }
+
+.mb-0 { margin-bottom: 0 !important; }
+
+/* nav*/
 .nav { height: 2.5rem; display: flex; justify-content: center; align-items: center; background: #dedede; position: relative; }
 .nav .nav-langeage { text-align: center; position: absolute; width: 2.05rem; height: 0.75rem; line-height: 0.75rem; background: #d5b08f; left: 0; top: 0.75rem; color: #fff; font-size: 0.35rem; }
 .nav .nav-langeage:after { content: ""; display: inline-block; width: 0.35rem; height: 0.225rem; background: url(../images/xia-icon.png) no-repeat; background-size: 100% 100%; margin-left: 0.1rem; }
@@ -32,6 +46,15 @@ body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, 
 
 .logo { width: 1.025rem; height: 1.675rem; margin: 0 auto; }
 
+/* banner*/
+.banner { margin-bottom: 1.6rem; position: relative; }
+.banner .banner-main { position: absolute; top: 1.95rem; right: 0.95rem; text-align: right; }
+.banner p { font-size: 0.95rem; color: #edefef; font-weight: lighter; margin-bottom: 0.4rem; text-transform: uppercase; letter-spacing: 0.1em; font-family: myhelvnul; letter-spacing: 0.1em; }
+.banner h1 { font-size: 1.15rem; font-weight: normal; color: #d5b08f; margin-bottom: 1.6rem; }
+.banner h1:after { content: ""; display: block; height: 0.05rem; width: 2rem; margin: 1rem 0 0 auto; background: #a6a6a6; }
+.banner span { color: #a1a1a2; font-weight: lighter; text-transform: uppercase; font-family: myhelvnul; letter-spacing: 0.1em; font-size: 0.35rem; }
+
+/* footer*/
 .footer { background: #303030; padding-top: 1.6rem; }
 .footer .ress { color: #eeeeee; text-align: center; }
 .footer .ress li { font-size: 0.475rem; display: inline-block; width: 35%; margin-bottom: 0.6rem; }
@@ -56,18 +79,19 @@ body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, 
 .banner-fwcx-form .fwcx-form-submit { background: #d5b08f; color: #fff; border: 0; line-height: 2.4em; text-indent: 0; }
 
 /*授权查询*/
-.banner-sqcx { text-align: center; width: 100%; height: 11.85rem; background: url(../images/banner-sqcx-bg.jpg) center no-repeat; background-size: 100% 100%; margin-bottom: 1.6rem; }
-.banner-sqcx p { font-size: 0.95rem; color: #edefef; font-weight: lighter; padding-top: 2.6rem; margin-bottom: 0.4rem; text-transform: uppercase; }
+.banner-sqcx { text-align: center; width: 100%; height: 11.85rem; margin-bottom: 1.6rem; position: relative; }
+.banner-sqcx .banner-main { position: absolute; top: 1.95rem; left: 0; width: 100%; }
+.banner-sqcx p { font-size: 0.95rem; color: #edefef; font-weight: lighter; margin-bottom: 0.4rem; text-transform: uppercase; font-family: myhelvnul; letter-spacing: 0.1em; }
 .banner-sqcx h1 { font-size: 1.15rem; font-weight: normal; color: #d5b08f; margin-bottom: 2rem; }
 .banner-sqcx h1:after { content: ""; display: block; height: 0.05rem; width: 16%; margin: 1rem auto 0; background: #a6a6a6; }
-.banner-sqcx span { color: #a1a1a2; font-weight: lighter; text-transform: uppercase; font-size: 0.35rem; }
+.banner-sqcx span { color: #a1a1a2; font-weight: lighter; text-transform: uppercase; letter-spacing: 0.1em; font-size: 0.35rem; font-family: myhelvnul; }
 
 .sqcx { margin-bottom: 1.6rem; }
 .sqcx form { text-align: center; }
 .sqcx .sqcx-input { width: 50%; line-height: 1rem; border: 1px solid #333333; box-sizing: border-box; font-size: 0.45rem; text-indent: 0.4em; }
 .sqcx .sqcx-submit { width: 20%; line-height: 1.05rem; box-sizing: border-box; font-size: 0.45rem; background: #d5b08f; color: #fff; margin-left: 0.2rem; }
 
-/*登录*/
+/*经销商登陆*/
 .banner-denglu { text-align: center; position: relative; width: 100%; height: 18.5rem; background: url(../images/banner-denglu-bg.jpg) center no-repeat; background-size: 100% 100%; }
 
 .denglu-form-wrap { position: absolute; left: 50%; top: 50%; margin-top: -6rem; margin-left: -30%; padding: 1rem 0; -webkit-box-shadow: 0 0 0.2rem #ccc; -moz-box-shadow: 0 0 0.2rem #ccc; box-shadow: 0 0 0.2rem #ccc; width: 60%; background-color: #fff; }
@@ -77,13 +101,7 @@ body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, 
 .denglu-form-wrap .denglu-submit { line-height: 1.25rem; margin-top: 0.5rem; border: 0; box-sizing: border-box; font-size: 0.45rem; text-indent: 0; background: #d5b08f; margin-bottom: 0; color: #fff; }
 .denglu-form-wrap .wangji-mm { font-size: 0.35rem; color: #666; text-decoration: underline; float: right; margin-right: 1rem; }
 
-/*系统*/
-.banner-xitong { text-align: right; padding-right: 1rem; height: 9.825rem; background: url(../images/banner-xitong-bg.jpg) center no-repeat; background-size: 100% 100%; margin-bottom: 1.6rem; }
-.banner-xitong p { font-size: 0.95rem; color: #edefef; font-weight: lighter; padding-top: 2rem; margin-bottom: 0.4rem; text-transform: uppercase; }
-.banner-xitong h1 { font-size: 1.15rem; font-weight: normal; color: #d5b08f; margin-bottom: 1.6rem; }
-.banner-xitong h1:after { content: ""; display: block; height: 0.05rem; width: 16%; margin: 1rem 0 0 auto; background: #a6a6a6; }
-.banner-xitong span { color: #a1a1a2; font-weight: lighter; text-transform: uppercase; font-size: 0.35rem; }
-
+/*经销商系统*/
 .xitong { margin-bottom: 1.6rem; }
 
 .xitong-ul { text-align: center; }
@@ -97,7 +115,7 @@ body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, 
 .xitong-ul li:nth-child(3) a:hover:before { content: ""; background: url(../images/fangwei-hover-icon.png); background-size: 100% 100%; }
 .xitong-ul li:nth-child(3) a:before { content: ""; background: url(../images/fangwei-icon.png); background-size: 100% 100%; }
 
-/*明星*/
+/*素万明星*/
 .banner-mingxing { margin-bottom: 1rem; }
 
 .mingxing-jianjie { text-align: center; margin-bottom: 1rem; }
@@ -115,5 +133,122 @@ body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, 
 .mingxing-cyz { padding: 1rem; }
 .mingxing-cyz h3 { font-size: 0.6rem; color: #d5b08f; text-align: center; line-height: 3em; }
 .mingxing-cyz p { font-size: 0.4rem; }
+
+/*产品分类*/
+.dongtai-ul { text-align: center; position: relative; top: -1rem; -webkit-box-shadow: 0 0.05rem 0.05rem #e5e5e4; -moz-box-shadow: 0 0.05rem 0.05rem #e5e5e4; box-shadow: 0 0.05rem 0.05rem #e5e5e4; background-color: #fff; margin: 0 0.8rem; }
+.dongtai-ul li { display: inline-block; width: 19.99%; font-size: 0.475rem; height: 2rem; }
+.dongtai-ul li a { line-height: 1rem; display: block; color: #6b645f; border-right: 1px solid #dddddd; margin: 0.5rem 0; }
+.dongtai-ul li:nth-last-child(1) a { border-right: 0; }
+
+.xp-h { display: -webkit-flex; display: -moz-flex; display: -ms-flex; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -webkit-align-items: center; -ms-moz-align-items: center; -moz-align-items: center; align-items: center; color: #d5b08f; margin-bottom: 1rem; padding: 0 0.8rem; }
+.xp-h p { font-size: 0.65rem; text-transform: uppercase; font-family: myhelvnul; letter-spacing: 3px; }
+.xp-h p.right { text-align: right; }
+.xp-h h2 { width: 5rem; height: 0.05rem; overflow: hidden; background: #d5b08f; }
+
+.product-list { display: -webkit-flex; display: -moz-flex; display: -ms-flex; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -webkit-align-items: center; -ms-moz-align-items: center; -moz-align-items: center; align-items: center; -webkit-flex-wrap: wrap; -moz-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; padding: 0 0.8rem; }
+.product-list li { width: 48.5%; color: #6b645f; text-align: center; background: #fff; margin-bottom: 0.5rem; padding-bottom: 0.5rem; -webkit-box-shadow: 0 0.025rem 0.025rem #e9e8e5; -moz-box-shadow: 0 0.025rem 0.025rem #e9e8e5; box-shadow: 0 0.025rem 0.025rem #e9e8e5; }
+.product-list li img { height: 5rem; width: 100%; display: block; }
+.product-list li h3 { font-size: 0.6rem; font-weight: normal; margin: 0.25rem auto 0; }
+.product-list li h4 { font-size: 0.45rem; font-weight: normal; margin-bottom: 0.25rem; }
+.product-list li p { font-size: 0.4rem; margin-bottom: 0.45rem; }
+.product-list li a.more { font-size: 0.45rem; color: #d5b08f; border: 1px solid #d5b08f; padding: 0.1rem 0.5rem; display: inline-block; text-transform: uppercase; }
+
+.product-fenye { text-align: center; margin: 1rem auto 1.65rem; }
+
+.product-fenye li { font-size: 0.45rem; display: inline-block; margin: 0 0.2rem; border: 1px solid #6b645f; padding: 0.05rem 0.3rem; box-sizing: border-box; }
+
+.product-fenye li a { color: #000; }
+
+.product-fenye li.thisclass { color: #fff; background: #d5b08f; padding: 0.15rem 0.3rem; border: 0; box-sizing: border-box; }
+
+/*产品详情*/
+.breadcrumb { font-size: 0.45rem; margin-bottom: 0.5rem; }
+.breadcrumb a { color: #6b645f; margin: 0 0.2rem; }
+.breadcrumb a:hover { color: #d5b08f; }
+
+.detail { padding: 0 0.8rem; }
+
+#detail-img .swiper-button-next, #detail-img .swiper-button-prev { width: 0.45rem; height: 0.75rem; padding: 0.375rem 0.225rem; background: #d5b08f; }
+
+.detail-jianjie { width: 100%; color: #6b645f; position: relative; margin-top: 0.8rem; }
+.detail-jianjie h2 { font-size: 0.75rem; line-height: 2em; font-weight: normal; }
+.detail-jianjie h3 { font-size: 0.45rem; margin-bottom: 0.25rem; font-weight: normal; }
+.detail-jianjie p.price { position: absolute; top: 0.25rem; right: 0; font-size: 0.7rem; float: right; display: inline-block; }
+.detail-jianjie ul { border-top: 1px solid #d5b08f; padding-top: 0.75rem; margin-top: 0.375rem; }
+.detail-jianjie ul li { font-size: 0.45rem; color: #a09c99; line-height: 1.8em; }
+
+h2.myh { font-size: 0.85rem; line-height: 1.4em; color: #d5b08f; font-weight: lighter; text-transform: uppercase; font-family: myhelvnul; margin-bottom: 1rem; vertical-align: top; position: relative; }
+h2.myh span { position: absolute; right: 0; top: 0.25rem; font-size: 0.6rem; font-weight: normal; color: #6b645f; vertical-align: top; line-height: 1.3em; }
+
+.details-show { background: #faf9f6; padding: 1.25rem 0.8rem; margin-top: 0.5rem; }
+.details-show .details-show-1 { text-align: center; margin-bottom: 1.5rem; }
+.details-show .details-show-1 p { font-size: 0.4rem; color: #6b645f; margin-top: 0.5rem; }
+.details-show .details-show-2 { position: relative; }
+.details-show .details-show-2 .product-b-p { position: absolute; top: 2.15rem; right: 0; text-align: right; }
+.details-show .details-show-2 p { font-size: 0.4rem; line-height: 1em; color: #6b645f; margin-bottom: 0.35rem; }
+
+.smty { text-align: center; background: url(../images/smty-bg.jpg); background-size: 100% 100%; padding: 1.35rem 0; }
+.smty h3 { font-size: 0.85rem; font-weight: lighter; text-transform: uppercase; font-family: myhelvnul; color: #d5b08f; letter-spacing: 6px; }
+.smty p { font-size: 0.6rem; color: #fff; margin-top: 0.5rem; margin-bottom: 0.75rem; }
+.smty ul li { display: inline-block; color: #fff; border: 1px solid #d5b08f; font-size: 0.4rem; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px; margin: 0 0.625rem 0.5rem; width: 35%; line-height: 2.5em; }
+
+.zzlc { margin-top: 1.25rem; margin-bottom: 1.25rem; padding: 0 0.8rem; position: relative; }
+.zzlc h2 { position: absolute; top: 0; left: 0.8rem; font-size: 0.85rem; line-height: 1em; color: #d5b08f; font-weight: lighter; text-transform: uppercase; font-family: myhelvnul; margin-bottom: 1rem; }
+.zzlc h2 span { font-size: 0.6rem; font-weight: normal; color: #6b645f; }
+
+#slide-banner { overflow: visible !important; width: 80%; margin: 0 auto 1.25rem; }
+#slide-banner .swiper-button-next { right: -1rem; }
+#slide-banner .swiper-button-prev { left: -1rem; }
+
+#slide-banner .swiper-button-next, #slide-banner .swiper-button-prev { width: 0.75rem; height: 1.375rem; background: #fff; }
+
+.longtime-note { background: #090909 url(../images/longtime-note-bg.jpg) no-repeat center; background-size: 100% 100%; padding: 1.25rem 0.8rem; }
+
+.longtime h3 { font-size: 0.9rem; font-weight: lighter; text-transform: uppercase; font-family: myhelvnul; color: #d5b08f; letter-spacing: 3px; text-align: center; }
+.longtime h4 { font-size: 0.6rem; color: #fff; font-weight: normal; margin-top: 0.35rem; margin-bottom: 0.5rem; text-align: center; }
+.longtime p { margin-bottom: 0.5rem; font-size: 0.4rem; color: #dddddd; line-height: 1.6em; }
+
+.note { background: rgba(0, 0, 0, 0.3); padding: 0.75rem 1rem; width: 82%; margin: 0 auto; }
+.note h3 { font-size: 0.9rem; text-align: center; font-weight: lighter; text-transform: uppercase; font-family: myhelvnul; letter-spacing: 3px; color: #d5b08f; margin-bottom: 0.5rem; }
+.note ul { text-align: left; color: #dddddd; }
+.note ul li { margin-bottom: 0.55rem; }
+.note ul li span { font-weight: lighter; font-family: myhelvnul; color: #d5b08f; letter-spacing: 3px; }
+.note ul li:nth-last-child(1) { margin-bottom: 0; }
+
+/*动态*/
+.dongtai-list { margin: 0 0; padding: 0 1rem; }
+
+.dongtai-list li { border-bottom: 1px solid #ccc; padding-bottom: 0.5rem; padding-top: 0.5rem; padding-left: 0.5rem; }
+
+.dongtai-list li:nth-child(1) { background: #d5b08f; display: block; }
+.dongtai-list li:nth-child(1) dt, .dongtai-list li:nth-child(1) dd p { color: #fff; }
+.dongtai-list li:nth-child(1) dl:after { content: ""; background: url(../images/right-hover-icon.png) no-repeat; background-size: 100%; }
+
+.dongtai-list li:nth-last-child(1) { border-bottom: 0; }
+
+.dongtai-list li:hover { background: #d5b08f; display: block; }
+.dongtai-list li:hover dt, .dongtai-list li:hover dd p { color: #fff; }
+.dongtai-list li:hover dl:after { content: ""; background: url(../images/right-hover-icon.png) no-repeat; background-size: 100%; }
+
+.dongtai-list dl { position: relative; }
+
+.dongtai-list dl:after { content: ""; width: 0.275rem; height: 0.425rem; background: url(../images/right-icon.png) no-repeat; background-size: 100%; display: block; position: absolute; right: 0.5rem; top: 0.5rem; }
+
+.dongtai-list dt { color: #6b645f; font-size: 0.5rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding-right: 1rem; }
+
+.dongtai-list dd p { color: #8e8781; font-size: 0.25rem; padding-right: 1rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+
+/*手机新品动态*/
+.dt-xp { margin-bottom: 1.5rem; padding: 0 0.8rem; }
+.dt-xp dt { width: 60%; }
+.dt-xp dd { width: 34%; color: #6b645f; padding-top: 0.75rem; }
+.dt-xp dd p { font-size: 0.9rem; text-transform: uppercase; letter-spacing: 3px; }
+.dt-xp dd h3 { font-size: 0.55rem; font-weight: normal; margin-bottom: 0.75rem; }
+.dt-xp dd h3:after { content: ""; height: 2px; width: 100%; display: block; background: #d5b08f; margin-top: 0.75rem; }
+.dt-xp dd a { font-size: 0.4rem; color: #d5b08f; border: 1px solid #d5b08f; padding: 0.1rem 0.5rem; display: inline-block; }
+.dt-xp .left { float: left; }
+.dt-xp .right { float: right; }
+.dt-xp dd.left { text-align: right; }
+.dt-xp dd.left h3:after { content: ""; margin-left: auto; }
 
 /*# sourceMappingURL=styles.css.map */
