--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ a img { border: none; }
 a > img { vertical-align: bottom; }
 
 /* 页面主代码 */
-body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, Arial, sans-serif; color: #333333; background: #e8e9ed; overflow-y: scroll; overflow-x: hidden; *overflow-y: auto !important; max-width: 640px; margin: 0 auto; font-size: 0.55rem; line-height: 1.6em; }
+body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, Arial, sans-serif; color: #333333; background: #e8e9ed; overflow-y: scroll; overflow-x: hidden; *overflow-y: auto !important; max-width: 640px; margin: 0 auto !important; font-size: 0.55rem; line-height: 1.6em; }
 
 .hui { background: #faf9f6; }
 
@@ -322,5 +322,12 @@ h2.myh span { position: absolute; right: 0; top: 0.25rem; font-size: 0.6rem; fon
 .dklw div a { position: relative; display: block; }
 
 .dklw div a span { position: absolute; left: 0; bottom: 0; font-size: 18px; font-family: 微软雅黑; line-height: 36px; background: rgba(255, 255, 255, 0.5); padding: 0 10px; font-weight: bold; }
+
+.fixed { position: fixed; top: 0; width: 100%; max-width: 640px; z-index: 99999; }
+
+.section1 img { width: 100%; height: 100%; }
+
+.section7 .ewf h3 { margin-bottom: 3.4rem; }
+.section7 .wah { position: absolute; bottom: 0; left: 0; width: 100%; }
 
 /*# sourceMappingURL=styles.css.map */
