--- a/css/styles.scss
+++ b/css/styles.scss
@@ -119,7 +119,7 @@ body {
   overflow-x: hidden;
   *overflow-y: auto !important;
   max-width: 640px;
-  margin: 0 auto;
+  margin: 0 auto !important;
   font-size: px2rem(22px);
   line-height: 1.6em;
 }
@@ -1372,3 +1372,30 @@ h2.myh{
 .dklw{width:80%;display:inline;overflow:hidden;float:left;}
 .dklw div a{position:relative;display:block;}
 .dklw div a span{position:absolute;left:0;bottom:0;font-size:18px;font-family:微软雅黑;line-height:36px;background:rgba(255,255,255,0.5);padding:0 10px;font-weight:bold;}
+
+
+.fixed{
+    position: fixed;
+    top:0;
+    width:100%;
+    max-width: 640px;
+    z-index: 99999;
+}
+
+.section1{
+    img{
+        width:100%;
+        height:100%;
+    }
+}
+.section7{
+    .ewf h3{
+        margin-bottom: 3.4rem;
+    }
+    .wah{
+        position:absolute;
+        bottom:0;
+        left:0;
+        width:100%;
+    }
+}
