--- a/css/styles.scss
+++ b/css/styles.scss
@@ -138,52 +138,58 @@ body {
 .mb-0{
 	margin-bottom: 0 !important;
 }
+
 /* nav*/
-.nav{
+.fixed-nav{
+	position: fixed;
+	top:0;
+	width:100%;
+	z-index: 999999999999;
+	font-size: px2rem(20px) !important;
+}
+.navbar-toggle{
+	border:0 !important;
+	margin-top:0.6rem !important;
+	margin-right:1rem !important;	
+}
+.navbar-toggle{
+	margin-bottom: 0.6rem !important;
+}
+.mynav{
     height:px2rem(100px);
-    display: flex;
     justify-content: center;
     align-items: center;
     background: #dedede;
-    position: relative;
+    max-width:640px;
     .nav-langeage{
         text-align: center;
         position:absolute;
       width:px2rem(82px);
-      height:px2rem(30px); 
-      line-height: px2rem(30px); 
+      height:px2rem(40px); 
+
       background: $color;
       left:0;
       top:px2rem(30px);
       color:#fff;
-      font-size: px2rem(14px);
-      &:after{
-          content:"";
-          display: inline-block;
-          width:px2rem(14px);
-          height:px2rem(9px);
-          background: url(../images/xia-icon.png) no-repeat;
-          background-size: 100% 100%;
-          margin-left: 0.1rem;
-      }
-    }
-        .nav-toggler-icon{
-            position: absolute;
-            top:px2rem(30px);
-            right:px2rem(30px);
-        width:px2rem(36px);
-        height:px2rem(28px);
-        background: url(../images/toggle-icon.png) center no-repeat;
-        background-size: 100% 100%;
+	  .dropdown-toggle{
+		  display: block;
+		  text-align: center;
+          line-height: px2rem(40px); 
+          font-size: px2rem(18px);	
+						  color:#fff;
+	  }
     }
 }
 .logo{
     width:px2rem(41px);
     height:px2rem(67px);
     margin:0 auto;
+	position:absolute;
+	top:px2rem(20px);
+	left:50%;
+	margin-left:-(px2rem(20px));
 
 }
-
 /* banner*/
 .banner{
     margin-bottom: 1.6rem;
@@ -1044,6 +1050,7 @@ h2.myh{
 .dongtai-list{
 	margin:0 0;
 	padding:0 px2rem(40px);
+	text-align: left;
 }
 
 .dongtai-list li {
@@ -1373,13 +1380,41 @@ h2.myh{
 .dklw div a{position:relative;display:block;}
 .dklw div a span{position:absolute;left:0;bottom:0;font-size:18px;font-family:微软雅黑;line-height:36px;background:rgba(255,255,255,0.5);padding:0 10px;font-weight:bold;}
 
-
-.fixed{
-    position: fixed;
-    top:0;
-    width:100%;
-    max-width: 640px;
-    z-index: 99999;
+/*首页*/
+.section{
+	h2{
+        font-size: px2rem(34px);
+		line-height: 1.3em;
+        color:$color;
+        font-weight: lighter;
+        margin-bottom:px2rem(30px);
+        text-transform: uppercase;
+	    font-family:myhelvnul;
+		letter-spacing: px2rem(2px);
+		&:after{
+			content:"";
+			width:1.4rem;
+			height:px2rem(2px);
+			background: $color;
+			display: block;
+			margin:px2rem(20px) auto 0;
+		}		
+	}
+	h3{
+		color:#fff;
+        font-size: px2rem(24px);
+		font-weight: normal;
+		margin-bottom: px2rem(70px);
+	}
+	a.more{
+		font-size: px2rem(34px);
+		color:$color;
+		border:1px solid $color;
+		padding:px2rem(10px) px2rem(40px);
+		display: inline-block;
+		text-transform: uppercase;	
+	    font-family:myhelvnul;
+	}		
 }
 
 .section1{
@@ -1388,6 +1423,150 @@ h2.myh{
         height:100%;
     }
 }
+
+.section2{
+	text-align: center;
+
+	.mysp{
+		width:70%;
+		margin:0 auto px2rem(160px) ;
+	}
+
+}
+
+.section3{
+	h2{
+		text-align: center;		
+	}
+	h3{
+		text-align: center;		
+		color:$zi;			
+	}
+	.product-items{
+		margin:0 px2rem(17px) ;
+		li{
+			height:px2rem(120px);
+			background-color: #59585a;
+			background-size: 100% 100%;
+			margin-bottom: px2rem(6px);
+			a{
+				position:relative;
+				color:$color;
+				line-height:px2rem(120px);
+				font-size:px2rem(24px);
+				padding-left:0.6rem;
+				display: block;
+				span{
+					color:#fff;
+				}
+				&:hover{
+					background-color: rgba(211,175,145,0.6);
+				}
+				&:after{
+					content:"";
+					position:absolute;
+					top:px2rem(55px);
+					right:px2rem(30px);
+					display: inline-block;
+					width:px2rem(11px);
+					height:px2rem(17px);
+					background: url(../images/right-hover-icon.png) no-repeat;
+					background-size: 100% 100%;
+				}
+			}
+		}
+		li.cr{
+			background-image: url(../images/cr-bg.jpg);			
+		}
+		li.et{
+			background-image: url(../images/et-bg.jpg);			
+		}
+		li.cd{
+			background-image: url(../images/cd-bg.jpg);			
+		}
+		li.ql{
+			background-image: url(../images/ql-bg.jpg);			
+		}
+		li.qt{
+			background-image: url(../images/qt-bg.jpg);			
+		}
+	}
+}
+
+.section4{
+}
+.jiankang{
+	text-align: center;
+	
+}
+.section5{
+	text-align: center;
+	h2{
+		text-align: center;		
+	}	
+	h3{
+		text-align: center;		
+		color:$zi;			
+	}
+	.swiper-container{
+		padding-bottom: 4rem;
+	}
+	.swiper-pagination-bullet-active{
+		background:$color;
+	}
+}
+.user-experience{
+	dt{
+		width:px2rem(83px);
+		height:px2rem(83px);
+		margin:0 auto 1rem;
+	}
+	dd{
+		border:px2rem(1px) solid $color;
+		width:70%;
+		margin:0 auto ;
+		h4{
+			font-size: px2rem(22px);
+			position:relative;
+			top:-0.4rem;
+			background: #fff;
+			display: inline-block;
+			color:#6b645f;
+			padding:0 0.4rem;
+			
+		}
+		h5{
+			font-size: px2rem(17px);
+			font-weight:normal;
+			color:#a39d97;
+			position:relative;
+			top:-0.3rem;					
+		}
+		p{
+			font-size: px2rem(16px);
+			color:#7e7873;
+			text-align: justify;
+			padding:0 px2rem(20px) px2rem(25px);
+											
+		}
+	}
+
+}
+
+.section6{
+	text-align: center;
+	h2{
+		text-align: center;		
+	}	
+	h3{
+		text-align: center;		
+		color:$zi;			
+	}
+	a.more{
+		margin:px2rem(50px) auto 0;
+	}
+}
+
 .section7{
     .ewf h3{
         margin-bottom: 3.4rem;
@@ -1398,4 +1577,15 @@ h2.myh{
         left:0;
         width:100%;
     }
+}
+.fp-controlArrow{
+	top:55% !important;
+}
+.fp-controlArrow.fp-prev{
+	border-width: px2rem(38.5px) px2rem(34px) px2rem(38.5px) 0 !important;
+    border-color: transparent $color transparent transparent !important;
+}
+.fp-controlArrow.fp-next{
+	border-width: px2rem(38.5px) 0 px2rem(38.5px) px2rem(34px) !important;
+    border-color: transparent transparent transparent $color !important;
 }
