--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @font-face { font-family: myhelvnul; src: url("../fonts/HELVNUL.TTF"); }
 .clearfix:after, .dt-xp:after, .honor:after { content: ""; height: 0; display: block; clear: both; visibility: hidden; }
 
-.ewf, .sqcx form, .xitong-ul, .mingxing-jianjie, .dongtai-ul, .product-fenye, .smty ul, .honor-ul { font-size: 0; -webkit-text-size-adjust: none; }
+.ewf, .sqcx form, .xitong-ul, .mingxing-jianjie, .dongtai-ul, .product-fenye, .smty ul, .honor-ul, .jiankang { font-size: 0; -webkit-text-size-adjust: none; }
 
 /* 设置HTML5元素为块 */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
@@ -26,7 +26,7 @@ a img { border: none; }
 a > img { vertical-align: bottom; }
 
 /* 页面主代码 */
-body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, Arial, sans-serif; color: #333333; background: #e8e9ed; overflow-y: scroll; overflow-x: hidden; *overflow-y: auto !important; max-width: 640px; margin: 0 auto !important; font-size: 0.55rem; line-height: 1.6em; }
+body { font-family: 'Heiti SC', 'Microsoft YaHei', "Helvetica Neue", Helvetica, Arial, sans-serif; color: #333333; background: #e8e9ed; overflow-y: scroll; overflow-x: hidden; *overflow-y: auto !important; max-width: 640px; margin: 0 auto !important; font-size: 0.55rem; line-height: 1.6em; padding-top: 2.5rem; }
 
 .hui { background: #faf9f6; }
 
@@ -241,7 +241,7 @@ h2.myh span { position: absolute; right: 0; top: 0.25rem; font-size: 0.6rem; fon
 
 .dongtai-list dt { color: #6b645f; font-size: 0.5rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding-right: 1rem; }
 
-.dongtai-list dd p { color: #8e8781; font-size: 0.25rem; padding-right: 1rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+.dongtai-list dd p { color: #8e8781; font-size: 0.4rem; padding-right: 1rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
 
 /*手机新品动态*/
 .dt-xp { margin-bottom: 1.5rem; padding: 0 0.8rem; }
@@ -334,7 +334,11 @@ h2.myh span { position: absolute; right: 0; top: 0.25rem; font-size: 0.6rem; fon
 .section h3 { color: #fff; font-size: 0.6rem; font-weight: normal; margin-bottom: 1.75rem; }
 .section a.more { font-size: 0.85rem; color: #d5b08f; border: 1px solid #d5b08f; padding: 0.25rem 1rem; display: inline-block; text-transform: uppercase; font-family: myhelvnul; }
 
-.section1 img { width: 100%; height: 100%; }
+.section1 { background-image: url(../images/banner.jpg); background-size: 100%  100%; text-align: center; }
+.section1 h1 { font-size: 0.8rem; line-height: 1.3em; color: #6b645f; font-weight: lighter; margin-bottom: 0.25rem; text-transform: uppercase; font-family: myhelvnul; letter-spacing: 0.05rem; }
+.section1 h2 { color: #d5b08f; font-size: 1.2rem; font-weight: normal; margin-bottom: 13.25rem; }
+.section1 h2:after { content: ""; width: 0; height: 0; }
+.section1 p { font-size: 0.45rem; color: #6b645f; }
 
 .section2 { text-align: center; }
 .section2 .mysp { width: 70%; margin: 0 auto 4rem; }
@@ -353,7 +357,19 @@ h2.myh span { position: absolute; right: 0; top: 0.25rem; font-size: 0.6rem; fon
 .section3 .product-items li.ql { background-image: url(../images/ql-bg.jpg); }
 .section3 .product-items li.qt { background-image: url(../images/qt-bg.jpg); }
 
+.section4 { text-align: center; }
+.section4 .myp { font-size: 0.375rem; color: #ccc; margin-top: 0.5rem; margin-bottom: 1.75rem; }
+
 .jiankang { text-align: center; }
+.jiankang li { font-size: 0.4rem; width: 3.3rem; height: 3.3rem; display: inline-block; color: #fff; -webkit-border-radius: 50%; -moz-border-radius: 50%; border-radius: 50%; border: 0.025rem solid #d5b08f; margin: 0 0.2rem; }
+.jiankang li span { color: #d5b08f; display: inline-block; padding-top: 0.8rem; }
+
+#myjiankang .swiper-button-next, #myjiankang .swiper-button-prev { width: 0.45rem; height: 0.75rem; padding: 0.375rem 0.225rem; background: #d5b08f; }
+
+.jiankang-items { width: 46%; margin: 0 auto; background: #333; padding-top: 1rem; border-bottom: 0.05rem solid #d5b08f; }
+.jiankang-items dt { color: #d5b08f; font-size: 0.5rem; }
+.jiankang-items dd { font-size: 0.4rem; color: #fff; }
+.jiankang-items dd p { padding: 1rem; text-align: justify; }
 
 .section5 { text-align: center; }
 .section5 h2 { text-align: center; }
@@ -363,7 +379,7 @@ h2.myh span { position: absolute; right: 0; top: 0.25rem; font-size: 0.6rem; fon
 
 .user-experience dt { width: 2.075rem; height: 2.075rem; margin: 0 auto 1rem; }
 .user-experience dd { border: 0.025rem solid #d5b08f; width: 70%; margin: 0 auto; }
-.user-experience dd h4 { font-size: 0.55rem; position: relative; top: -0.4rem; background: #fff; display: inline-block; color: #6b645f; padding: 0 0.4rem; }
+.user-experience dd h4 { font-size: 0.55rem; position: relative; top: -0.4rem; background: #faf9f6; display: inline-block; color: #6b645f; padding: 0 0.4rem; }
 .user-experience dd h5 { font-size: 0.425rem; font-weight: normal; color: #a39d97; position: relative; top: -0.3rem; }
 .user-experience dd p { font-size: 0.4rem; color: #7e7873; text-align: justify; padding: 0 0.5rem 0.625rem; }
 
