--- a/css/styles.scss
+++ b/css/styles.scss
@@ -122,6 +122,7 @@ body {
   margin: 0 auto !important;
   font-size: px2rem(22px);
   line-height: 1.6em;
+  padding-top:2.5rem;
 }
 .hui{
 	background: #faf9f6;
@@ -1113,7 +1114,7 @@ h2.myh{
 
 .dongtai-list dd p {
   color: #8e8781;
-  font-size:  px2rem(10px);
+  font-size:  px2rem(16px);
   padding-right: 1rem;  
   overflow: hidden;
   text-overflow: ellipsis;
@@ -1418,9 +1419,35 @@ h2.myh{
 }
 
 .section1{
-    img{
-        width:100%;
-        height:100%;
+    background-image: url(../images/banner.jpg);
+    background-size: 100%  100%;
+    text-align: center;
+
+    h1{
+         font-size: px2rem(32px);
+        line-height: 1.3em;
+        color:$zi;
+        font-weight: lighter;
+        margin-bottom:px2rem(10px);
+        text-transform: uppercase;
+        font-family:myhelvnul;
+        letter-spacing: px2rem(2px);       
+    }
+    h2{
+        color:$color;
+        font-size: px2rem(48px);
+        font-weight: normal;
+        margin-bottom: px2rem(530px);  
+        &:after{
+            content:"";
+            width:0;
+            height:0;
+        
+        }      
+    }
+    p{
+        font-size: px2rem(18px);
+        color:$zi;
     }
 }
 
@@ -1494,10 +1521,59 @@ h2.myh{
 }
 
 .section4{
+    text-align: center;
+    .myp{
+        font-size: px2rem(15px);
+        color:#ccc;
+        margin-top:px2rem(20px);
+        margin-bottom: px2rem(70px);
+    }
 }
 .jiankang{
 	text-align: center;
+	@extend %font-size-no;
+	li{
+	    font-size: px2rem(16px);
+	    width:px2rem(132px);
+	    height:px2rem(132px);
+	    display: inline-block;
+	    color:#fff;
+	    @include radius(50%);
+	    border:px2rem(1px) solid $color;
+	    margin: 0 0.2rem;
+	    span{
+	        color:$color;
+	        display: inline-block;
+	        padding-top: 0.8rem;
+	    }
+	}
 	
+}
+#myjiankang .swiper-button-next,#myjiankang .swiper-button-prev{
+    width:px2rem(18px);
+    height:px2rem(30px);
+    padding:px2rem(15px) px2rem(9px) ;
+    
+    background: $color;
+}
+.jiankang-items{
+    width:46%;
+    margin:0 auto;
+    background: #333;
+    padding-top: 1rem;
+    border-bottom: px2rem(2px) solid $color;
+    dt{
+        color:$color;
+        font-size: px2rem(20px);
+    }
+    dd{
+        font-size: px2rem(16px);
+        color:#fff;
+        p{
+            padding:1rem;
+            text-align: justify;
+        }
+    }
 }
 .section5{
 	text-align: center;
@@ -1529,7 +1605,7 @@ h2.myh{
 			font-size: px2rem(22px);
 			position:relative;
 			top:-0.4rem;
-			background: #fff;
+			background: #faf9f6;
 			display: inline-block;
 			color:#6b645f;
 			padding:0 0.4rem;
